<resources>
    <string name="app_name">Member Android</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title_no">No</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_mobile_no">Mobile No</string>
    <string name="title_homepage">Homepage</string>
    <string name="title_address">Address</string>
    <string name="title_gender">Gender</string>
    <string name="title_job">Job</string>
    <string name="title_comments">Comments</string>

    <string name="message_email_required">Email is requred!</string>
    <string name="message_email_invalid">Email is invalid!</string>
    <string name="message_name_required">Name is requred!</string>
    <string name="message_password_required">Password is requred!</string>
    <string name="message_delete">Are you sure you want to delete this memberEntity?</string>

    <string-array name="jobs">
        <item>Student</item>
        <item>Developer</item>
        <item>Web Desiginer</item>
        <item>Teacher</item>
        <item>Docter</item>
        <item>Nurse</item>
        <item>Accouter</item>
        <item>Driver</item>
    </string-array>


</resources>
